# powertools_workshop

./: .dockerignore  .gitignore  README.md  mise.toml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS
.github/workflows/: cdk-deploy.yml
docs/: workshop_guide.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/docker/: Dockerfile  requirements.txt
infra/lib/: 書籍Apiスタック.ts
src/: handler.py  schema.py
src/domain/: entity.py  exceptions.py  object_values.py  repositories.py
src/infrastructure/: dynamodb_repository.py
src/services/: book_service.py  dto.py  util.py
