[project]
name = "powertools-workshop"
version = "0.1.0"
description = "Lambda Powertools hands-on sample"
requires-python = ">=3.14,<3.15"
dependencies = [
  "aws-lambda-powertools",
  "boto3",
  "boto3-stubs[cognito-idp,essential,ssm]>=1.42.16",
  "pydantic",
  "pytest",
  "ruff",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
[tool.ruff.lint.extend-per-file-ignores]
"app.py" = ["B008"]
"tables.py" = ["B008"]

[tool.ruff.lint.isort]
